Responsiveness added, reset and play/pause functionality added.

--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-
     <h1>Memory Card Match</h1>
-
-    <div class="score-board">
-        Score: <span id="score">0</span>
+    <div class="top-bar">
+        <div class="score-board">
+            Score: <span id="score">0</span>
+        </div>
+        <div class="controls">
+            <button id="playPauseBtn">Pause</button>
+            <button id="restartBtn">Restart</button>
+        </div>
     </div>
-
     <div class="game-container" id="gameBoard"></div>
-
     <script src="index.js"></script>
 </body>
 </html>
