--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Memory Card Match</h1>
     <div class="top-bar">
         <div class="score-board">
-            Score: <span id="score">0</span>
+            Time Left: <span id="timer">90</span>s
         </div>
         <div class="controls">
             <button id="playPauseBtn">Pause</button>
@@ -17,6 +17,7 @@
         </div>
     </div>
     <div class="game-container" id="gameBoard"></div>
+    <p class="gameMessage" id="gameMessage"></p>
     <script src="index.js"></script>
 </body>
 </html>
