Shuffled cards before starting the game visible at start, countdown starts from 0 and final winning message shows time.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Memory Card Match</h1>
     <div class="top-bar">
         <div class="score-board">
-            Time Left: <span id="timer">90</span>s
+            Time : <span id="timer">90</span>s
         </div>
         <div class="controls">
             <button id="playPauseBtn">Pause</button>
